fixed contact page mobile alignment

--- a/src/page/contact/contact.css
+++ b/src/page/contact/contact.css
@@ -202,4 +202,10 @@
     flex: 0.1 !important;
   }
 
+  .contactContainer .contactForm input[name='firstName'],
+  .contactContainer .contactForm input[name='lastName'],
+  .contactContainer .contactForm input[type='email'] {
+    width: 10vw;
+  }
+
 }
